--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #eee;
+}
+
 .search-bar{
     margin: 20px auto;
     text-align: center;
@@ -12,14 +16,16 @@
 }
 
 .video-detail .details{
+    background-color: #ffffff;
     margin-top: 10px;
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 1px solid #e9e9e9;
     border-radius: 4px;
 }
 
 .list-group-item{
     cursor: pointer;
+    margin-top: 10px;
 }
 
 .list-group-item:hover{
@@ -27,7 +33,7 @@
 }
 
 .detail{
-    padding: 10px;   
+    padding: 10px;
 }
 
 .detail-title{
