--- a/styles/index.css
+++ b/styles/index.css
@@ -19,17 +19,24 @@ body{
     background-color: #ffffff;
     margin-top: 10px;
     padding: 10px;
-    border: 1px solid #e9e9e9;
+    border: 1px solid #ddd;
     border-radius: 4px;
 }
 
-.list-group-item{
-    cursor: pointer;
+.list-group{
     margin-top: 10px;
+    margin-bottom: 60px;
+}
+
+.list-group-item{
+    margin-bottom: 1px;
+    cursor: pointer;
 }
 
 .list-group-item:hover{
-    background-color: #eee;
+    -moz-box-shadow: 0 0 20px #aaa;
+    -webkit-box-shadow: 0 0 20px #aaa;
+    box-shadow: 0 0 20px #aaa;
 }
 
 .detail{
@@ -39,4 +46,8 @@ body{
 .detail-title{
     font-size: 25px;
     font-weight: bold;
+}
+
+.media-heading{
+    padding-left: 10px;
 }
